Frontend/src/css/cssComponents/typo.css
/* everything typography, font sizes/weights/link styling/list styling/etc */
@import url("https://use.typekit.net/pei0pzi.css");
/* TODO: import futura properly */

* {
  font-family: "futura-pt", "Helvetica", "Arial", sans-serif;
}

h1 {
  font-weight: bold;
  font-size: 44px;
  text-transform: uppercase;
}

h2 {
  font-weight: bold;
  font-size: 36px;
  margin: 1rem 0px;
}

h3 {
  font-weight: bold;
  font-size: 24px;
  margin: 1rem 0px 0px;
}

h4 {
  font-weight: bold;
  font-size: 18px;
}

p {
  font-size: 16px;
}

#timer {
  font-weight: bold;
}

small {
  font-size: 12px;
  margin: var(--margin-small);
}

a {
  /* color: var(--hl-primary); */
  font-weight: bold;
}


.xlarge {
  font-size: 24px;
}

.bold {
  font-weight: bold;
}

.footerCopyright {
  text-align: center;
}

.darkText {
  color: var(--txt-shift-secondary);
}

@media (min-width: 1024px) {
  small {
    font-size: 14px;
  }

  label,
  p {
    font-size: 18px;
  }
}

